--- a/index.html
+++ b/index.html
@@ -459,9 +459,14 @@
               >
                 <i class="fab fa-instagram" aria-hidden="true"></i>
               </a>
-              <a href="mailto:toh4@gmu.edu" aria-label="Email">
+              <a
+                href="https://outlook.office.com/mail/deeplink/compose?to=toh4@gmu.edu&subject=문의드립니다&body=안녕하세요."
+                target="_blank"
+                aria-label="Email"
+              >
                 <i class="fas fa-envelope" aria-hidden="true"></i>
               </a>
+
               <a
                 href="https://discord.gg/yourinvitecode"
                 target="_blank"
