메가드롭다운제거

--- a/index.html
+++ b/index.html
@@ -121,43 +121,10 @@
           </button>
 
           <ul id="primary-nav" class="nav-links">
-            <li>
-              <a href="#about-us">About Us</a>
-              <div class="dropdown" aria-label="About Us submenu">
-                <p class="dropdown-title">About Us</p>
-                <a href="#about-us-introduction">Introduction</a>
-                <a href="#about-us-organization">Organization</a>
-              </div>
-            </li>
-            <li>
-              <a href="#projects">Projects</a>
-              <div class="dropdown" aria-label="Projects submenu">
-                <p class="dropdown-title">Projects</p>
-                <a href="#projects-ongoing">Ongoing</a>
-                <a href="#projects-completed">Completed</a>
-              </div>
-            </li>
-            <li>
-              <a href="#timeline">Timeline</a>
-              <div class="dropdown" aria-label="Timeline submenu">
-                <p class="dropdown-title">Timeline</p>
-                <a href="#timeline">Schedule</a>
-                <a href="#timeline">Past Events</a>
-              </div>
-            </li>
-            <li>
-              <a href="#recruit">Recruitment</a>
-              <div class="dropdown" aria-label="Recruitment submenu">
-                <p class="dropdown-title">Recruitment</p>
-                <a href="#recruit">Overview</a>
-                <a
-                  href="https://cdsd.masonkorea.edu/apply"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  >Apply</a
-                >
-              </div>
-            </li>
+            <li><a href="#about-us">About Us</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#timeline">Timeline</a></li>
+            <li><a href="#recruit">Recruitment</a></li>
           </ul>
         </div>
       </nav>
@@ -425,7 +392,7 @@
                 <i class="fab fa-instagram" aria-hidden="true"></i>
               </a>
               <a
-                href="https://outlook.office.com/mail/deeplink/compose?to=toh4@gmu.edu&subject=문의드립니다&body=안녕하세요."
+                href="https://outlook.office.com/mail/deeplink/compose?to=toh4@gmu.edu&subject=Application for CDSD&body="
                 target="_blank"
                 aria-label="Email"
               >
